# datasette-paste

./: README.md  prototype.html  pyproject.toml
datasette_paste/: __init__.py
datasette_paste/templates/: paste_create_table.html
tests/: test_paste.py
