[project]
name = "datasette-paste"
version = "0.1a0"
description = "Paste data to create tables in Datasette"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.8"
dependencies = [
    "datasette"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-paste"
Changelog = "https://github.com/datasette/datasette-paste/releases"
Issues = "https://github.com/datasette/datasette-paste/issues"
CI = "https://github.com/datasette/datasette-paste/actions"

[project.entry-points.datasette]
paste = "datasette_paste"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_paste = ["static/*", "templates/*"]
